database 2.0.1:
---------------

 ** Bugfix of random crash at initialization time.

Initial release of new package database 2.0.0:
----------------------------------------------

** This is a complete replacement of the former database package and
   is not compatible with previous releases. The current release only
   supports postgresql.

** Functions:

     pq_connect:      connect to a postgresql database,

     pq_exec_params:  execute an SQL command with optional parameters
                      and return result,

     pq_update_types: used if defined types change
                      during connection time,

     pq_lo_import:    import large object from client side,

     pq_lo_export:    export large object to client side,

     pq_lo_unlink:    delete large object,

     pq_close:        disconnect from database.